modify code to have login as the home page

--- a/views/signup.html
+++ b/views/signup.html
@@ -101,7 +101,7 @@
             <div class="d-flex justify-content-center">
                 <button type="submit" class="btn btn-success btn-lg btn-lock">Sign Up</button>
             </div>
-            <p class="text-center text-muted mt-5 mb-0">Have an account already? <a href="/login" class="fw-bold text-body"><u>Login here</u></a></p>
+            <p class="text-center text-muted mt-5 mb-0">Have an account already? <a href="/" class="fw-bold text-body"><u>Login here</u></a></p>
         </form>
     </div>
 </body>
