--- a/views/login.html
+++ b/views/login.html
@@ -36,7 +36,7 @@
             <div class="d-flex justify-content-center">
                 <button type="submit" class="btn btn-success btn-lg btn-lock">Login</button>
             </div>
-            <p class="text-center text-muted mt-5 mb-0">Don't have an account? <a href="/" class="fw-bold text-body"><u>Signup here</u></a></p>
+            <p class="text-center text-muted mt-5 mb-0">Don't have an account? <a href="/signup" class="fw-bold text-body"><u>Signup here</u></a></p>
         </form>
     </div>
 </body>
