modify login.html to inclue post method

--- a/views/login.html
+++ b/views/login.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="form" style="border-radius: 15px;">
-        <form>
+        <form action="/landing" method="post">
             <div class="title">
                 <h1>Login</h1>
                 
