--- a/views/landing_page.html
+++ b/views/landing_page.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="welcome">
-        <h1><i>Hi, Daniel! You are beautiful just the way you are!</i></h1>
+        <h1><i>Welcome back, Daniel! Remember, you are beautiful just the way you are!</i></h1>
     </div>
     
 </body>
