--- a/views/signup.html
+++ b/views/signup.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="form" style="border-radius: 15px;">
-        <form>
+        <form action="./first" method="post">
             <div class="title">
                 <h1>Sign up</h1>
                 
