add name attribut inside form input field to allow body-parser to fetch front end value

--- a/views/login.html
+++ b/views/login.html
@@ -26,12 +26,12 @@
 
             <div class="mb-3">
                 <label for="emailaddress" class="form-label">Email Address</label>
-                <input type="name" class="form-control" id="email" placeholder="Your Email">
+                <input type="name" name="email" class="form-control" id="email" placeholder="Your Email">
             </div>
 
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="name" class="form-control" id="password" placeholder="Password">
+                <input type="name" name="password" class="form-control" id="password" placeholder="Password">
             </div>
             <div class="d-flex justify-content-center">
                 <button type="submit" class="btn btn-success btn-lg btn-lock">Login</button>
