--- a/views/signup.html
+++ b/views/signup.html
@@ -25,22 +25,22 @@
             <div class="name">
                 <div class="mb-3">
                     <label for="firstName" class="form-label">First Name</label>
-                    <input type="name" class="form-control" id="firstName" placeholder="First Name" required>
+                    <input type="name" name="firstName" class="form-control" id="firstName" placeholder="First Name" required>
                 </div>
                 <div class="mb-3">
                     <label for="lastName" class="form-label">Last Name</label>
-                    <input type="name" class="form-control" id="lastName" placeholder="Last Name" required>
+                    <input type="name" name="lastName" class="form-control" id="lastName" placeholder="Last Name" required>
                 </div>
             </div>
 
             <div class="mb-3">
                 <label for="emailaddress" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="email" placeholder="Your Email" pattern="[a-zA-Z0-9!#$%&amp'*+\/=?^_`{|}~.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*" required>
+                <input type="email" name="email" class="form-control" id="email" placeholder="Your Email" pattern="[a-zA-Z0-9!#$%&amp'*+\/=?^_`{|}~.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*" required>
             </div>
 
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="name" class="form-control" id="password" placeholder="Password" required>
+                <input type="name" name="password" class="form-control" id="password" placeholder="Password" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Confirm Password</label>
@@ -57,7 +57,7 @@
                 <label for="font">
                     What's your favorite font?
                 </label>
-                <select class="form-control" id="font">
+                <select class="form-control" id="font" name="font">
                     <option>serif</option>
                     <option>sans serif</option>
                     <option>cursive</option>
@@ -70,7 +70,7 @@
                 <label for="color">
                     What's your favorite color?
                 </label>
-                <select class="form-control" id="color">
+                <select class="form-control" id="color" name="color">
                     <option>green</option>
                     <option>blue</option>
                     <option>yellow</option>
@@ -83,7 +83,7 @@
                 <label for="season">
                     What's your favorite season?
                 </label>
-                <select class="form-control" id="season">
+                <select class="form-control" id="season" name="season">
                     <option>spring</option>
                     <option>summer</option>
                     <option>fall</option>
