add js code to dynamically render landing page and verify user login and signup

--- a/public/style.css
+++ b/public/style.css
@@ -50,3 +50,9 @@ form {
 .form-check {
     margin-right:10px;
 }
+
+.error-message {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
