Modify landing page

--- a/views/landing_page.ejs
+++ b/views/landing_page.ejs
@@ -28,16 +28,16 @@
     <div class="welcome">
         <div class="welcomeback">
             <% if(favSeason == "spring") { %>
-            <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Hope your day is going well so far!</i></h1>
+            <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Remember, you are beautiful just the way you are!</i></h1>
             <% } %>
             <% if(favSeason == "summer") { %>
-            <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Hope your day is going well so far!</i></h1>
+            <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Remember, you are beautiful just the way you are!</i></h1>
             <% } %>
             <% if(favSeason == "winter") { %>
-            <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Hope your day is going well so far!</i></h1>
+            <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Remember, you are beautiful just the way you are!</i></h1>
             <% } %>
             <% if(favSeason == "fall") { %>
-            <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Hope your day is going well so far!</i></h1>
+            <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Remember, you are beautiful just the way you are!</i></h1>
             <% } %>
         </div>
     </div>
