--- a/views/landing_page.ejs
+++ b/views/landing_page.ejs
@@ -12,31 +12,31 @@
         crossorigin="anonymous"></script>
     <title>Greetings</title>
 </head>
-<% if(favSeason == "spring") { %>
+<% if(favSeason == "Spring") { %>
     <body style="background-image: url('spring.jpg')">
 <% } %>
-<% if(favSeason == "summer") { %>
+<% if(favSeason == "Summer") { %>
     <body style="background-image: url('summer.jpg')">
 <% } %>
-<% if(favSeason == "winter") { %>
+<% if(favSeason == "Winter") { %>
     <body style="background-image: url('winter.jpg');">
 <% } %>
-<% if(favSeason == "fall") { %>
+<% if(favSeason == "Fall") { %>
     <body style="background-image: url('fall.jpg')">
 <% } %>
     
     <div class="welcome">
         <div class="welcomeback">
-            <% if(favSeason == "spring") { %>
+            <% if(favSeason == "Spring") { %>
             <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Remember, you are beautiful just the way you are!</i></h1>
             <% } %>
-            <% if(favSeason == "summer") { %>
+            <% if(favSeason == "Summer") { %>
             <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Remember, you are beautiful just the way you are!</i></h1>
             <% } %>
-            <% if(favSeason == "winter") { %>
+            <% if(favSeason == "Winter") { %>
             <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Remember, you are beautiful just the way you are!</i></h1>
             <% } %>
-            <% if(favSeason == "fall") { %>
+            <% if(favSeason == "Fall") { %>
             <h1><i>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Remember, you are beautiful just the way you are!</i></h1>
             <% } %>
         </div>
