--- a/views/landing_page.ejs
+++ b/views/landing_page.ejs
@@ -16,6 +16,9 @@
     <body style="background-image: url('<%= background_image %>')">
 
     <div class="welcome">
+        <div class="profile-image">
+            <img src="profile.jpg">
+        </div>
         <div class="welcomeback">
             <% if(favSeason == "Spring") { %>
             <h1><i><b>Welcome back, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Remember, you are beautiful just the way you are!</b></i></h1>
