--- a/views/landing_page.ejs
+++ b/views/landing_page.ejs
@@ -17,7 +17,7 @@
 
     <div class="welcome">
         <div class="profile-image">
-            <img src="profile.jpg">
+            <img src="<%= user_image %>">
         </div>
         <div class="welcomeback">
             <% if(favSeason == "Spring") { %>
