--- a/views/signup_landing_page.ejs
+++ b/views/signup_landing_page.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,24 +14,32 @@
     <title>Greetings</title>
 </head>
 
-    
-    <body style="background-image: url('<%= background_image %>')">
 
-    
-    <div class="welcomeback">
-        <% if(favSeason == "Spring") { %>
-        <h1><i>Welcome, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Let's take a deep breath and enjoy the breeze!</i></h1>
-        <% } %>
-        <% if(favSeason == "Summer") { %>
-        <h1><i>Welcome, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Most people's vivid recollection of summer is the ocean, what's yours?</i></h1>
-        <% } %>
-        <% if(favSeason == "Winter") { %>
-        <h1><i>Welcome, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! Even on the coldest days of winter the sun is bright in the sky, bringing joy to everyone's heart!</i></h1>
-        <% } %>
-        <% if(favSeason == "Fall") { %>
-        <h1><i>Welcome, <%= titlelizedFirstName  %> <%= titlelizedLastName  %>! The beauty of fall is mature--it is not as shy as spring, so dew in summer, and introverted in winter! </i></h1>
-        <% } %>
+<body style="background-image: url('<%= background_image %>')">
+    <div class="welcome">
+        <div class="profile-image">
+            <img src="<%= user_image %>">
+        </div>
+
+        <div class="welcomeback">
+            <% if(favSeason=="Spring" ) { %>
+            <h1><i>Welcome, <%= titlelizedFirstName %><%= titlelizedLastName %>! Let's take a deep breath and enjoy the breeze!</i></h1>
+            <% } %>
+            <% if(favSeason=="Summer" ) { %>
+            <h1><i>Welcome, <%= titlelizedFirstName %><%= titlelizedLastName %>! Most people's vivid recollection of summer is the ocean,
+            what's yours?</i></h1>
+            <% } %>
+            <% if(favSeason=="Winter" ) { %>
+            <h1><i>Welcome, <%= titlelizedFirstName %>
+            <%= titlelizedLastName %>! Even on the coldest days of winter the sun is bright in the sky, bringing joy to everyone's heart!</i></h1>
+            <% } %>
+            <% if(favSeason=="Fall" ) { %>
+            <h1><i>Welcome, <%= titlelizedFirstName %> <%= titlelizedLastName %>! The beauty of fall is mature--it is not as
+            shy as spring, so dew in summer, and introverted in winter! </i>
+            </h1>
+            <% } %>
+        </div>
     </div>
-    
 </body>
+
 </html>
