add remove button and functionality to signup landing page

--- a/views/landing_page.ejs
+++ b/views/landing_page.ejs
@@ -45,7 +45,7 @@
                     <% } %>
                 <% }) %>
             </ul>
-            <form class="form-inline" action="/add-reminder" method="post">
+            <form class="form-inline" action="/add-reminder-login" method="post">
                 <div class="form-group mb-2">
                     <label for="inputReminder" class="sr-only"></label>
                     <input type="text" class="form-control" name="newReminder" placeholder="Reminder">
